[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.80"
license = "Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
avante-tokenizers = { path = "crates/avante-tokenizers" }
avante-templates = { path = "crates/avante-templates" }
avante-repo-map = { path = "crates/avante-repo-map" }
minijinja = { version = "2.4.0", features = [
  "loader",
  "json",
  "fuel",
  "unicode",
  "speedups",
  "custom_syntax",
  "loop_controls",
] }
mlua = { version = "0.10.0", features = ["module", "serialize"] }
tiktoken-rs = { version = "0.6.0" }
tokenizers = { version = "0.20.0", features = [
  "esaxx_fast",
  "http",
  "unstable_wasm",
  "onig",
], default-features = false }
serde = { version = "1.0.209", features = ["derive"] }

[workspace.lints.rust]
unsafe_code = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -2 }
# Allowed pedantic lints
char_lit_as_u8 = "allow"
collapsible_else_if = "allow"
collapsible_if = "allow"
implicit_hasher = "allow"

